--- a/js/style.css
+++ b/js/style.css
@@ -69,3 +69,35 @@ lightest: #c0c5ce
   position:relative;
 	top:1px;
 }
+
+
+.myButton2{
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 0px;
+}
+.theButton2{
+  background-color: #65737e;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  border: 2px solid #707070;
+  display: inline-block;
+  cursor: pointer;
+  color: #c0c5ce;
+  font-family: Arial;
+  font-size: 18px;
+  padding: 6px 11px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #293336;
+  position: static;
+}
+.theButton2:hover{
+  background-color:#4f5b66;
+}
+.theButton2:active{
+  position:relative;
+	top:1px;
+}
